Course 1 Week 2 Lecture: Social buttons, font icons, navbar, and breadcrumbs

--- a/BootstrapWeek1/conFusion/css/styles.css
+++ b/BootstrapWeek1/conFusion/css/styles.css
@@ -10,12 +10,6 @@
     min-height: 200px;
 }
 
-.title-content {
-    margin: 0px auto;
-    padding: 20px 0px 20px 0px;
-    border-bottom: 1pm ridge;
-}
-
 .footer {
     background-color: rgb(197, 232, 255);
     margin: 0px auto;
@@ -29,9 +23,17 @@
     color: floralwhite;
 }
 
-.address {
+address {
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
 }
 
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark {
+    background-color: rgb(9, 91, 146);
+}
