--- a/BootstrapWeek1/conFusion/css/styles.css
+++ b/BootstrapWeek1/conFusion/css/styles.css
@@ -44,3 +44,26 @@ body {
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
+
+.carousel {
+    background: rgb(21, 121, 187);
+}
+
+.carousel-item {
+    height: 200px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 200px;
+}
+
+.carousel-caption {
+    padding-left: 200px;
+}
+
+.carousel-indicators {
+    padding-left: 200px;
+}
