--- a/BootstrapWeek1/conFusion/css/styles.scss
+++ b/BootstrapWeek1/conFusion/css/styles.scss
@@ -71,3 +71,15 @@ body {
     bottom: 0px;
     position: absolute;
 }
+
+.modal-header {
+    background: $background-dark;
+    color: floralwhite;
+    .close {
+        color:floralwhite;
+    }
+}
+
+.modal-body {
+    background: $background-pale;
+}
