--- a/BootstrapWeek1/conFusion/css/styles.css
+++ b/BootstrapWeek1/conFusion/css/styles.css
@@ -51,3 +51,12 @@ body {
   right: 0px;
   bottom: 0px;
   position: absolute; }
+
+.modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+  .modal-header .close {
+    color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9; }
